RTG Module crash fix